# medsearch-ai

./: .dockerignore  .env.example  .gitignore  PROJECT_SPECIFICATION.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py  logging.py
backend/app/schemas/: api.py
backend/app/services/: cases.py  llm.py  negation.py  rerank.py  retrieval.py
data/reports/: cleaning_report.json  cleaning_report.md  profile_report.json  profile_report.md
data/scripts/: clean_dataset.py  explain.py  kaggle_embed_notebook.py  load_qdrant.py  make_dev_subset.py  profile_dataset.py  search.py
deploy/space/: Dockerfile  README.md  build_space.ps1
docs/: HOW_IT_WORKS.md  RAPPORT_PROJET.md
evaluation/: RESULTS.md  build_gold_set.py  eval_api.py  eval_nim_reranker.py  gold_queries.jsonl  kaggle_rerank_notebook.py  make_rerank_input.py  manual_test_suite.py  merge_rerank.py  negation_api_test.py  nim_rerank_output.json  rerank_output.json  run_eval.py
evaluation/results/: results_bgem3-v1.json
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: CaseCard.tsx  CaseDrawer.tsx  CohortStrip.tsx  ExplanationPanel.tsx  FilterRail.tsx  SimilarityTrace.tsx
infra/nginx/: default.conf
